--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             x="0px"
             y="0px"
             viewBox="0 0 750 500"
-            style="enable-background: new 0 0 750 500;"
+            style="enable-background: new 0 0 750 500"
             xml:space="preserve"
           >
             <style type="text/css">
@@ -240,7 +240,7 @@
                   <rect y="286.2" class="st1" width="750" height="112.5" />
                   <g class="st2">
                     <image
-                      style="overflow: visible;"
+                      style="overflow: visible"
                       width="3422"
                       height="770"
                       xlink:href="3E79A5B5.png"
@@ -249,27 +249,9 @@
                   </g>
                   <g>
                     <g>
-                      <line
-                        class="st3"
-                        x1="741.1"
-                        y1="341.1"
-                        x2="716.1"
-                        y2="341.1"
-                      />
-                      <line
-                        class="st4"
-                        x1="663.3"
-                        y1="341.1"
-                        x2="56.6"
-                        y2="341.1"
-                      />
-                      <line
-                        class="st3"
-                        x1="30.2"
-                        y1="341.1"
-                        x2="5.2"
-                        y2="341.1"
-                      />
+                      <line class="st3" x1="741.1" y1="341.1" x2="716.1" y2="341.1" />
+                      <line class="st4" x1="663.3" y1="341.1" x2="56.6" y2="341.1" />
+                      <line class="st3" x1="30.2" y1="341.1" x2="5.2" y2="341.1" />
                     </g>
                   </g>
                 </g>
@@ -277,7 +259,7 @@
                   <rect y="398.8" class="st5" width="750" height="101.2" />
                   <g class="st2">
                     <image
-                      style="overflow: visible;"
+                      style="overflow: visible"
                       width="3426"
                       height="723"
                       xlink:href="3E79A5B7.png"
@@ -287,27 +269,9 @@
                   <line class="st6" x1="750" y1="405.8" x2="0" y2="405.8" />
                   <g>
                     <g>
-                      <line
-                        class="st6"
-                        x1="745.4"
-                        y1="466.3"
-                        x2="740.4"
-                        y2="466.3"
-                      />
-                      <line
-                        class="st7"
-                        x1="730.4"
-                        y1="466.3"
-                        x2="15.4"
-                        y2="466.3"
-                      />
-                      <line
-                        class="st6"
-                        x1="10.4"
-                        y1="466.3"
-                        x2="5.4"
-                        y2="466.3"
-                      />
+                      <line class="st6" x1="745.4" y1="466.3" x2="740.4" y2="466.3" />
+                      <line class="st7" x1="730.4" y1="466.3" x2="15.4" y2="466.3" />
+                      <line class="st6" x1="10.4" y1="466.3" x2="5.4" y2="466.3" />
                     </g>
                   </g>
                 </g>
@@ -355,13 +319,7 @@
                     />
                   </g>
                   <g>
-                    <rect
-                      x="459.6"
-                      y="167.4"
-                      class="st9"
-                      width="6.7"
-                      height="118.8"
-                    />
+                    <rect x="459.6" y="167.4" class="st9" width="6.7" height="118.8" />
 
                     <ellipse
                       transform="matrix(0.1625 -0.9867 0.9867 0.1625 238.6137 583.415)"
@@ -373,20 +331,8 @@
                     />
                   </g>
                   <g>
-                    <rect
-                      x="73.6"
-                      y="167.3"
-                      class="st9"
-                      width="6.7"
-                      height="118.9"
-                    />
-                    <ellipse
-                      class="st9"
-                      cx="76.9"
-                      cy="151"
-                      rx="45.2"
-                      ry="45.1"
-                    />
+                    <rect x="73.6" y="167.3" class="st9" width="6.7" height="118.9" />
+                    <ellipse class="st9" cx="76.9" cy="151" rx="45.2" ry="45.1" />
                   </g>
                 </g>
                 <g id="clouds">
@@ -406,11 +352,8 @@
                     x2="473.6043"
                     y2="76.0938"
                   >
-                    <stop offset="0" style="stop-color: #ffffff;" />
-                    <stop
-                      offset="1"
-                      style="stop-color: #ffffff; stop-opacity: 0;"
-                    />
+                    <stop offset="0" style="stop-color: #ffffff" />
+                    <stop offset="1" style="stop-color: #ffffff; stop-opacity: 0" />
                   </linearGradient>
                   <path
                     class="st11"
@@ -425,11 +368,8 @@
                     x2="271.674"
                     y2="113.028"
                   >
-                    <stop offset="0" style="stop-color: #ffffff;" />
-                    <stop
-                      offset="1"
-                      style="stop-color: #ffffff; stop-opacity: 0;"
-                    />
+                    <stop offset="0" style="stop-color: #ffffff" />
+                    <stop offset="1" style="stop-color: #ffffff; stop-opacity: 0" />
                   </linearGradient>
                   <path
                     class="st12"
@@ -444,11 +384,8 @@
                     x2="664.107"
                     y2="159.4637"
                   >
-                    <stop offset="0" style="stop-color: #ffffff;" />
-                    <stop
-                      offset="1"
-                      style="stop-color: #ffffff; stop-opacity: 0;"
-                    />
+                    <stop offset="0" style="stop-color: #ffffff" />
+                    <stop offset="1" style="stop-color: #ffffff; stop-opacity: 0" />
                   </linearGradient>
                   <path
                     class="st13"
@@ -521,24 +458,9 @@
 							c0.2,0.4,0,0.9-0.4,1.2l-4.6,3.4c0,0,0,0-0.1,0c-0.5,0.8-1.2,1.6-2.4,2c-1.4,0.5-3,0.3-4.2-0.6c-1.9-1.4-1.8-3.7-1.4-5.8
 							c0.3-1.3,0.9-4.6,0.9-4.6C266.2,263.9,267,263.4,267.8,263.7z"
                         />
-                        <line
-                          class="st17"
-                          x1="276.9"
-                          y1="268.4"
-                          x2="273.8"
-                          y2="270.7"
-                        />
-                        <line
-                          class="st17"
-                          x1="272.7"
-                          y1="264"
-                          x2="271.1"
-                          y2="267.5"
-                        />
-                        <path
-                          class="st17"
-                          d="M270.3,270.2c0.5-1.3-0.2-2.7-1.5-3.2"
-                        />
+                        <line class="st17" x1="276.9" y1="268.4" x2="273.8" y2="270.7" />
+                        <line class="st17" x1="272.7" y1="264" x2="271.1" y2="267.5" />
+                        <path class="st17" d="M270.3,270.2c0.5-1.3-0.2-2.7-1.5-3.2" />
                       </g>
                     </g>
                     <path
@@ -551,13 +473,7 @@
                     d="M236.2,302.7l-29.6-1.6l1.1-34.4c0-2.2,1.8-4,4-4h16.9c4.2,0,7.6,3.4,7.6,7.6V302.7z"
                   />
                   <g>
-                    <rect
-                      x="217.5"
-                      y="255"
-                      class="st16"
-                      width="7.7"
-                      height="12.5"
-                    />
+                    <rect x="217.5" y="255" class="st16" width="7.7" height="12.5" />
                     <path
                       class="st19"
                       d="M225.1,254v8.3l-7.6-8.1c1.1,0.4,2.3,0.6,3.6,0.6C222.5,254.7,223.9,254.5,225.1,254z"
@@ -588,13 +504,7 @@
                       d="M215.4,246.6c1.2,1.6,1.3,3.6,0.2,4.4c-1.1,0.8-2.9,0.2-4.2-1.4c-1.2-1.6-1.3-3.6-0.2-4.4
 					S214.2,245,215.4,246.6z"
                     />
-                    <line
-                      class="st20"
-                      x1="212"
-                      y1="247"
-                      x2="214.6"
-                      y2="249.2"
-                    />
+                    <line class="st20" x1="212" y1="247" x2="214.6" y2="249.2" />
                     <g>
                       <path
                         class="st15"
@@ -639,10 +549,7 @@
                         d="M228.4,245.6c0-0.6,0.5-1,1-1c0.6,0,1,0.5,1,1c0,0.6-0.5,1-1,1C228.9,246.6,228.4,246.2,228.4,245.6z"
                       />
                     </g>
-                    <path
-                      class="st20"
-                      d="M227.6,252.4h-2.2c-0.6,0-1.1-0.2-1.5-0.6l0,0"
-                    />
+                    <path class="st20" d="M227.6,252.4h-2.2c-0.6,0-1.1-0.2-1.5-0.6l0,0" />
                   </g>
                   <g>
                     <path
@@ -670,27 +577,9 @@
 							c-1.2-2.4-0.1-5.5,2.4-6.8c0.7-0.4,1.3-0.5,2-0.6c0.2-0.2,0.4-0.4,0.6-0.5c0.1-0.1,0.3-0.2,0.5-0.2l3.9-0.8
 							C230.1,293.7,230.7,294.1,230.8,294.7z"
                         />
-                        <line
-                          class="st17"
-                          x1="229"
-                          y1="300.1"
-                          x2="233.8"
-                          y2="302"
-                        />
-                        <line
-                          class="st17"
-                          x1="227.6"
-                          y1="302.1"
-                          x2="232.5"
-                          y2="304.1"
-                        />
-                        <line
-                          class="st17"
-                          x1="225"
-                          y1="303.6"
-                          x2="229.9"
-                          y2="305.5"
-                        />
+                        <line class="st17" x1="229" y1="300.1" x2="233.8" y2="302" />
+                        <line class="st17" x1="227.6" y1="302.1" x2="232.5" y2="304.1" />
+                        <line class="st17" x1="225" y1="303.6" x2="229.9" y2="305.5" />
                       </g>
                     </g>
                   </g>
@@ -714,29 +603,14 @@
                     d="M229.4,249.5c0,1,0.8,1.9,1.8,2c0.1-0.2,0.1-0.4,0.2-0.6c0.1-0.6,0.2-0.1,0.2-0.7v-2.6c0,0-0.1,0-0.2,0
 				C230.3,247.6,229.4,248.5,229.4,249.5z"
                   />
-                  <line
-                    class="st23"
-                    x1="236.2"
-                    y1="272.5"
-                    x2="236.2"
-                    y2="279.1"
-                  />
-                  <polyline
-                    class="st23"
-                    points="213.1,270.8 210.7,280.4 201,274.8 			"
-                  />
+                  <line class="st23" x1="236.2" y1="272.5" x2="236.2" y2="279.1" />
+                  <polyline class="st23" points="213.1,270.8 210.7,280.4 201,274.8 			" />
                   <path
                     class="st10"
                     d="M273.7,284L273.7,284c-1.5,0-2.7-1.2-2.7-2.7v-21c0-1.5,1.2-2.7,2.7-2.7l0,0c1.5,0,2.7,1.2,2.7,2.7v21
 				C276.4,282.8,275.2,284,273.7,284z"
                   />
-                  <line
-                    class="st24"
-                    x1="273.8"
-                    y1="270.7"
-                    x2="291.6"
-                    y2="274"
-                  />
+                  <line class="st24" x1="273.8" y1="270.7" x2="291.6" y2="274" />
                 </g>
                 <path
                   class="st25"
@@ -874,24 +748,9 @@
 							c0.1,0.6,0.7,1.1,1.3,1.2l8.1,1.2c0,0,0.1,0,0.1,0c1.2,0.7,2.6,1.1,4.3,0.9c2.1-0.3,3.9-1.7,4.8-3.6c1.4-3-0.2-5.9-2.1-8.2
 							c-1.2-1.5-4.3-5.2-4.3-5.2C484.2,281.3,482.8,281.2,482,282.1z"
                         />
-                        <line
-                          class="st17"
-                          x1="473.8"
-                          y1="294.2"
-                          x2="479.2"
-                          y2="294.9"
-                        />
-                        <line
-                          class="st17"
-                          x1="476"
-                          y1="285.7"
-                          x2="480.4"
-                          y2="289"
-                        />
-                        <path
-                          class="st17"
-                          d="M483.3,291.9c-1.5-1.3-1.6-3.5-0.3-5"
-                        />
+                        <line class="st17" x1="473.8" y1="294.2" x2="479.2" y2="294.9" />
+                        <line class="st17" x1="476" y1="285.7" x2="480.4" y2="289" />
+                        <path class="st17" d="M483.3,291.9c-1.5-1.3-1.6-3.5-0.3-5" />
                       </g>
                     </g>
                     <path
@@ -918,13 +777,7 @@
                           class="st8"
                           points="526.3,439 562.9,439 561,428.3 542.1,428.3 						"
                         />
-                        <line
-                          class="st33"
-                          x1="563.3"
-                          y1="439"
-                          x2="562.9"
-                          y2="439"
-                        />
+                        <line class="st33" x1="563.3" y1="439" x2="562.9" y2="439" />
                       </g>
                       <path
                         class="st32"
@@ -956,13 +809,7 @@
                           class="st8"
                           points="557.8,439 594.4,439 592.4,428.3 573.6,428.3 						"
                         />
-                        <line
-                          class="st33"
-                          x1="594.7"
-                          y1="439"
-                          x2="594.4"
-                          y2="439"
-                        />
+                        <line class="st33" x1="594.7" y1="439" x2="594.4" y2="439" />
                       </g>
                       <path
                         class="st32"
@@ -974,10 +821,7 @@
                         class="st18"
                         points="570.4,422.7 590.6,422.7 571.4,303.3 551.2,303.3 					"
                       />
-                      <path
-                        class="st34"
-                        d="M554.3,322.1c-1.9-1.5-3.8-3.1-5.6-4.6"
-                      />
+                      <path class="st34" d="M554.3,322.1c-1.9-1.5-3.8-3.1-5.6-4.6" />
                     </g>
                   </g>
                   <path
@@ -1029,13 +873,7 @@
                       d="M559.3,230.4c-1.7,2.3-1.9,5.1-0.3,6.3c1.6,1.2,4.2,0.3,5.9-2c1.7-2.3,1.9-5.1,0.3-6.3
 					C563.6,227.2,561,228.1,559.3,230.4z"
                     />
-                    <line
-                      class="st20"
-                      x1="564"
-                      y1="231.1"
-                      x2="560.4"
-                      y2="234.2"
-                    />
+                    <line class="st20" x1="564" y1="231.1" x2="560.4" y2="234.2" />
                     <g>
                       <path
                         class="st15"
@@ -1086,10 +924,7 @@
 						C539.9,230.5,540.6,229.8,540.6,229z"
                       />
                     </g>
-                    <path
-                      class="st20"
-                      d="M541.9,238.7h3.2c0.8,0,1.6-0.3,2.1-0.9l0,0"
-                    />
+                    <path class="st20" d="M541.9,238.7h3.2c0.8,0,1.6-0.3,2.1-0.9l0,0" />
                     <path
                       class="st15"
                       d="M540.9,211.6c-3.8-0.5-7.6-0.4-11.4-0.2c0.6,4.8,5,8.3,9.4,8.8c2.1,0.2,11.4-0.8,11.9-3.8
@@ -1127,27 +962,9 @@
 							c1.7-3.5,0.2-7.8-3.4-9.8c-0.9-0.5-1.9-0.8-2.9-0.9c-0.3-0.3-0.6-0.5-0.9-0.7c-0.2-0.1-0.4-0.3-0.7-0.3l-5.6-1.2
 							C538.2,297.6,537.4,298.2,537.3,299.1z"
                         />
-                        <line
-                          class="st17"
-                          x1="539.9"
-                          y1="306.8"
-                          x2="532.9"
-                          y2="309.5"
-                        />
-                        <line
-                          class="st17"
-                          x1="541.8"
-                          y1="309.7"
-                          x2="534.9"
-                          y2="312.4"
-                        />
-                        <line
-                          class="st17"
-                          x1="545.5"
-                          y1="311.7"
-                          x2="538.5"
-                          y2="314.5"
-                        />
+                        <line class="st17" x1="539.9" y1="306.8" x2="532.9" y2="309.5" />
+                        <line class="st17" x1="541.8" y1="309.7" x2="534.9" y2="312.4" />
+                        <line class="st17" x1="545.5" y1="311.7" x2="538.5" y2="314.5" />
                       </g>
                     </g>
                   </g>
@@ -1225,10 +1042,7 @@
                     </g>
                   </g>
                 </g>
-                <polyline
-                  class="st38"
-                  points="562.8,266 565.9,278.6 579.8,270.6 		"
-                />
+                <polyline class="st38" points="562.8,266 565.9,278.6 579.8,270.6 		" />
                 <line class="st38" x1="529.6" y1="266" x2="529.6" y2="280" />
               </g>
             </g>
@@ -1312,15 +1126,13 @@
       </section>
       <!-- footer -->
       <section class="footer">
-        <h4>The Website Kitchen &copy; 2020</h4>
+        <h4>KhanX&copy; 2021</h4>
         <ul>
           <li>
             <a href="#"><img src="./img/twitter 1.svg" alt="twitter" /></a>
           </li>
           <li>
-            <a href="#"
-              ><img src="./img/youtube-symbol 1.svg" alt="youtube"
-            /></a>
+            <a href="#"><img src="./img/youtube-symbol 1.svg" alt="youtube" /></a>
           </li>
           <li>
             <a href="#"><img src="./img/instagram 1.svg" alt="instagram" /></a>
